# gpt2-from-scratch

./: .gitignore  README.md  advanced_decoding.ipynb  exp.py  pretrain.ipynb  pyproject.toml
engine/: engine.py
src/: __init__.py  models.py
src/backbones/: gpt.py
src/blocks/: decoder.py
src/datamodule/: dataloaders.py  datasets.py
src/heads/: classification.py
src/layers/: activations.py  attention.py  embedding.py  feedforward.py  layernorm.py
src/tokenizers/: models.py
src/utils/: model_summary.py  token_generator.py
