[tool.poetry]
name = "gpt2-from-scratch"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tiktoken = "0.5.1"
torch = "^2.3.0"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ruff = "^0.1.9"

[tool.ruff]
line-length = 300

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"*" = ["S101", "S301", "S311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
